# SchemeInterpreter

./: .gitignore  CMakeLists.txt  Makefile  NOTES.md  README  README.md
src/: config-info.h.in  eval.c  eval.h  lexer.c  lexer.h  main.c  main.h  parser.c  parser.h  procedure-add.c  procedure-and.c  procedure-and.h  procedure-append.c  procedure-append.h  procedure-assoc.c  procedure-caddddr.c  procedure-caddddr.h  procedure-cadddr.c  procedure-cadddr.h  procedure-caddr.c  procedure-cadr.c  procedure-cadr.h  procedure-car.c  procedure-car.h  procedure-cdr.c  procedure-cdr.h  procedure-cond.c  procedure-cons.c  procedure-cons.h  procedure-define.c  procedure-define.h  procedure-equal.c  procedure-equal.h  procedure-exit.c  procedure-exit.h  procedure-greater.c  procedure-greaterequal.c  procedure-greaterequal.h  procedure-if.c  procedure-isequal.c  (+55 more)
src/main/: CMakeLists.txt  main.c
src/modules/: CMakeLists.txt  eval.h  lexer.h  loader.c  loader.h  parser.c  utils.c
src/procedures/: CMakeLists.txt  procedure-add.h  procedure-assoc.h  procedure-caddddr.c  procedure-caddr.h  procedure-car.h  procedure-cond.h  procedure-cons.h  procedure-greater.h  procedure-if.h  procedure-isequal.c  procedure-isequal.h  procedure-islist.h  procedure-isnull.c  procedure-isnull.h  procedure-lambda.h  procedure-last.h  procedure-less.c  procedure-less.h  procedure-lessequal.h  procedure-let.c  procedure-let.h  procedure-list.h  procedure-multiply.c  procedure-multiply.h  procedure-or.h  procedure-quote.h  procedures.h
src/procedures/add/: CMakeLists.txt  procedure-add.c  procedure-add.h
src/procedures/and/: CMakeLists.txt  procedure-and.c  procedure-and.h
src/procedures/append/: CMakeLists.txt  procedure-append.c  procedure-append.h
src/procedures/assoc/: CMakeLists.txt  procedure-assoc.c  procedure-assoc.h
src/procedures/caddddr/: CMakeLists.txt  procedure-caddddr.c  procedure-caddddr.h
src/procedures/cadddr/: CMakeLists.txt  procedure-cadddr.c  procedure-cadddr.h
src/procedures/caddr/: CMakeLists.txt  procedure-caddr.c  procedure-caddr.h
src/procedures/cadr/: CMakeLists.txt  procedure-cadr.c  procedure-cadr.h
src/procedures/car/: CMakeLists.txt  procedure-car.c  procedure-car.h
src/procedures/cdr/: CMakeLists.txt  procedure-cdr.c  procedure-cdr.h
src/procedures/cond/: CMakeLists.txt  procedure-cond.c  procedure-cond.h
src/procedures/cons/: CMakeLists.txt  procedure-cons.c  procedure-cons.h
src/procedures/define/: CMakeLists.txt  procedure-define.c  procedure-define.h
src/procedures/exit/: CMakeLists.txt  procedure-exit.c  procedure-exit.h
src/procedures/greater/: CMakeLists.txt  procedure-greater.c  procedure-greater.h
src/procedures/greaterequal/: CMakeLists.txt  procedure-greaterequal.c  procedure-greaterequal.h
src/procedures/if/: CMakeLists.txt  procedure-if.c  procedure-if.h
src/procedures/isequal/: CMakeLists.txt  procedure-isequal.c  procedure-isequal.h
src/procedures/islist/: CMakeLists.txt  procedure-islist.c  procedure-islist.h
src/procedures/isnull/: CMakeLists.txt  procedure-isnull.c  procedure-isnull.h
src/procedures/isnumber/: CMakeLists.txt  procedure-isnumber.c  procedure-isnumber.h
src/procedures/isprocedure/: CMakeLists.txt  procedure-isprocedure.c  procedure-isprocedure.h
src/procedures/issymbol/: CMakeLists.txt  procedure-issymbol.c  procedure-issymbol.h
src/procedures/lambda/: CMakeLists.txt  procedure-lambda.c  procedure-lambda.h
src/procedures/last/: CMakeLists.txt  procedure-last.c  procedure-last.h
src/procedures/length/: CMakeLists.txt  procedure-length.c  procedure-length.h
src/procedures/less/: CMakeLists.txt  procedure-less.c  procedure-less.h
src/procedures/lessequal/: CMakeLists.txt  procedure-lessequal.c  procedure-lessequal.h
src/procedures/let/: CMakeLists.txt  procedure-let.c  procedure-let.h
src/procedures/list/: CMakeLists.txt  procedure-list.c  procedure-list.h
src/procedures/multiply/: CMakeLists.txt  procedure-multiply.c  procedure-multiply.h
src/procedures/or/: CMakeLists.txt  procedure-or.c  procedure-or.h
src/procedures/quote/: CMakeLists.txt  procedure-quote.c  procedure-quote.h
src/procedures/subtract/: CMakeLists.txt  procedure-subtract.c  procedure-subtract.h
src/types/: CMakeLists.txt  scheme-boolean.h  scheme-element-private.h  scheme-element.c  scheme-element.h  scheme-lambda.h  scheme-namespace.c  scheme-namespace.h  scheme-number.h  scheme-pair.h  scheme-procedure-init.h  scheme-void.c  scheme-void.h
