SET(PROCEDURE_INSTALL_DESTINATION "share/${CMAKE_PROJECT_NAME}-${PROJECT_VERSION}/procedures")

ADD_SUBDIRECTORY(add)
ADD_SUBDIRECTORY(and)
ADD_SUBDIRECTORY(append)
ADD_SUBDIRECTORY(assoc)
ADD_SUBDIRECTORY(caddddr)
ADD_SUBDIRECTORY(cadddr)
ADD_SUBDIRECTORY(caddr)
ADD_SUBDIRECTORY(cadr)
ADD_SUBDIRECTORY(car)
ADD_SUBDIRECTORY(cdr)
ADD_SUBDIRECTORY(cond)
ADD_SUBDIRECTORY(cons)
ADD_SUBDIRECTORY(define)
ADD_SUBDIRECTORY(exit)
ADD_SUBDIRECTORY(greater)
ADD_SUBDIRECTORY(greaterequal)
ADD_SUBDIRECTORY(if)
ADD_SUBDIRECTORY(isequal)
ADD_SUBDIRECTORY(islist)
ADD_SUBDIRECTORY(isnull)
ADD_SUBDIRECTORY(isnumber)
ADD_SUBDIRECTORY(isprocedure)
ADD_SUBDIRECTORY(issymbol)
ADD_SUBDIRECTORY(lambda)
ADD_SUBDIRECTORY(last)
ADD_SUBDIRECTORY(length)
ADD_SUBDIRECTORY(less)
ADD_SUBDIRECTORY(lessequal)
ADD_SUBDIRECTORY(let)
ADD_SUBDIRECTORY(list)
ADD_SUBDIRECTORY(multiply)
ADD_SUBDIRECTORY(or)
ADD_SUBDIRECTORY(quote)
ADD_SUBDIRECTORY(subtract)
