ADD_LIBRARY(scheme_types OBJECT scheme-element.c
                                scheme-void.c
                                scheme-namespace.c
                                scheme-boolean.c
                                scheme-number.c
                                scheme-pair.c
                                scheme-symbol.c
                                scheme-procedure.c
                                scheme-lambda.c)
